@@ -29,6 +29,7 @@
  * Fix dired for directories with unicode files/dirs (#445)
  * Fix vim indenting under some circumstances (#621)
  * Allow the font size to be changed per buffer (#608)
+ * Double-click and triple-click selection in pango (#100 and #101)
 
 0.9.0
 -----
